--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,6 @@
 <body>
 
 <!-- Navbar -->
-
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <!-- Sidebar -->
@@ -28,14 +27,22 @@
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input class="form-control" id="password" placeholder="Enter your password" th:name = "password" type="password">
+          <input class="form-control" id="password" placeholder="Enter your password" th:name="password" type="password">
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
-      <p th:if="${error}" th:text="${error}"></p>
+      <!-- Bootstrap Toast for displaying errors -->
+      <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 100px; margin-right: 50px;" th:if="${error}">
+        <div class="toast-header bg-dark">
+          <strong class="mr-auto text-white">Error</strong>
+          <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+      </div>
     </div>
   </div>
 </main>
+
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
 
@@ -43,5 +50,18 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- Script to activate Bootstrap Toast -->
+<script>
+  $(document).ready(function () {
+      $('.toast').toast({
+          autohide: true,
+          delay: 5000, // 5 seconds
+          animation: true,
+          position: 'top-end'
+      }).toast('show');
+  });
+</script>
+
 </body>
 </html>
