--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -11,9 +11,8 @@
             <!-- Add messenger icon along with "Messages" link -->
             <li class="nav-item" th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser)
                      or (isTherapist != null and !#strings.isEmpty(isTherapist) and isTherapist)}">
-                <a class="nav-link" th:href="@{/show-user-message-list(userId = ${user.id})}">
-                    <i class="fab fa-facebook-messenger"></i> <!-- Messenger icon -->
-                    Messages
+                <a class="nav-link" th:href="@{/show-user-message-list}">
+                    Messages<i class="fab fa-facebook-messenger"></i> <!-- Messenger icon -->
                 </a>
             </li>
             <li class="nav-item dropdown">
